--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="add_widget">Add widget</string>
 
     <string name="bakingApp">Baking App</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ing_step_block">See Ingredients </string>
 </resources>
